<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".main.fragment.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_sound_name">
        <ImageView
            android:id="@+id/icon_sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sensitivity"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity"
            android:layout_toEndOf="@+id/icon_sensitivity"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />

        <SeekBar
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_below="@+id/icon_sensitivity"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:progressTint="@color/blue"
            android:thumb="@drawable/seekbar_thumb" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_sound_name">
        <ImageView
            android:id="@+id/icon_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sensitivity"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extension"
            android:layout_toEndOf="@+id/icon_extension"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/custom_switch_track"
            android:thumb="@drawable/ic_switch_thumb"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="18dp"            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_up"
            android:textSize="13sp"
            android:layout_below="@+id/icon_extension"
            android:layout_toRightOf="@+id/icon_extension"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_sound_name">
        <ImageView
            android:id="@+id/icon_flashlight_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flashlight"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_mode"
            android:layout_toEndOf="@+id/icon_flashlight_mode"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/icon_flashlight_mode"
            android:layout_margin="20dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaults"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disco_mode"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sos"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"/>
        </RadioGroup>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_sound_name">
        <ImageView
            android:id="@+id/icon_vibrate_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_shaking"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:layout_toEndOf="@+id/icon_vibrate_mode"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/icon_vibrate_mode"
            android:layout_margin="20dp"
            >

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaults"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strong_vib"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heartbeat"
                android:textSize="16sp"
                android:padding="10dp"
                app:buttonTint="@color/blue"/>


        </RadioGroup>

    </RelativeLayout>
</LinearLayout>