<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activities.alarmsound.AlarmSoundActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/image_button_back_alarmSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@color/white"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/text_title_alarmSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_sound"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/image_button_back_alarmSound"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/button_apply_alarmSound"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_continue"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_sound_name">
        <RelativeLayout
            android:id="@+id/circle_sound_name"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_circle_sound_name"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            >
            <ImageView
                android:id="@+id/icon_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/polygon" />



        </RelativeLayout>

        <TextView
            android:id="@+id/text_soundName_Alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_sound_name"
        android:layout_width="wrap_content"
        android:layout_height="120dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_sound_name"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_shaking"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:track="@drawable/custom_switch_track"
                android:thumb="@drawable/ic_switch_thumb"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:layout_marginEnd="20dp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flashlight"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flashlight"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:track="@drawable/custom_switch_track"
                android:thumb="@drawable/ic_switch_thumb"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:layout_marginEnd="20dp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sound"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:track="@drawable/custom_switch_track"
                android:thumb="@drawable/ic_switch_thumb"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            >
            <ImageView
                android:id="@+id/icon_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/volumes"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volumes"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
               android:layout_toEndOf="@+id/icon_volume"
                />

            <SeekBar
                android:id="@+id/seekbarProgress_alarmSound"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_below="@+id/icon_volume"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:progressTint="@color/blue"
                android:thumb="@drawable/seekbar_thumb" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"

            >
            <ImageView
                android:id="@+id/icon_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/duration"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/icon_duration"

                />

        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_time_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="20dp"/>
    </LinearLayout>


</LinearLayout>